# ci_demo

./: .gitignore  Dockerfile  Dockerfile_single  pyproject.toml
.github/workflows/: test.yml
src/: main.py
tests/: test_add.py
